<resources>
    <string name="app_name">Washoku Japanese food Menu Recipe &amp; Memo</string>
    <string name="c0">Chikaharu_Menu</string>
    <string name="c1">Sun</string>
    <string name="c2">Mon</string>
    <string name="c3">Tue</string>
    <string name="c4">Wed</string>
    <string name="c5">Thu</string>
    <string name="c6">Fri</string>
    <string name="c7">Sat</string>
    <string name="mm1">ㅤㅤㅤㅤㅤㅤㅤㅤ</string>
    <string name="mm2">ㅤㅤㅤㅤㅤㅤㅤㅤ</string>
    <string name="sm2">ㅤㅤㅤㅤㅤㅤㅤㅤ</string>
    <string name="sm1">ㅤㅤㅤㅤㅤㅤㅤㅤ</string>
    <string name="tt">title</string>
    <string name="hint">ㅤ</string>
    <string name="MenuList2">Screen shot</string>
    <string name="MenuList3a">Various functions</string>
    <string name="MenuList">Write / Paste</string>
    <string name="switch1">Write / Paste</string>
    <string name="reboot">Reboot?</string>
    <string name="exit">Exit?</string>
    <string name="menu5a">Do you want to hide banner ads \nby watching video ads?</string>
    <string name="menu5b">(It can be hidden until the next time \nit is started.)</string>
    <string name="menu5c">Video ads have been viewed.</string>
    <string name="Manual_input">Manual input</string>
    <string name="Shuffle_order">Shuffle order</string>
    <string name="Find_details">Find details</string>
    <string name="Main_dish">Main dish</string>
    <string name="side_dish_Salads">Side dish,Salads</string>
    <string name="Soup">Soup,Miso Soup</string>
    <string name="Fruits_Desserts">Fruits,Desserts</string>
    <string name="beef">Beef</string>
    <string name="pork">Pork</string>
    <string name="chicken">Chicken</string>
    <string name="kyuuri">Cucumber</string>
    <string name="daikon">Japanese white radish</string>
    <string name="retasu">Lettuce</string>
    <string name="kyabetsu">Cabbage</string>
    <string name="moyashi">Bean sprouts</string>
    <string name="hakusai">Napa cabbage</string>
    <string name="tamanegi">Onion</string>
    <string name="negi">Leek</string>
    <string name="jyagaimo">Potato</string>
    <string name="satsumaimo">Sweet potato</string>
    <string name="ninjin">Carrot</string>
    <string name="kabocya">Pumpkin</string>
    <string name="tomato">Tomato</string>
    <string name="nasu">Egg plant</string>
    <string name="piman">Green pepper</string>
    <string name="burokkori">Broccoli</string>
    <string name="kabu">Turnip</string>
    <string name="hourensou">Spinach</string>
    <string name="komatsuna">Japanese mustard spinach</string>
    <string name="chingensai">Bok choy</string>
    <string name="okura">Okra</string>
    <string name="nira">Chinese chives</string>
    <string name="gobou">Burdock</string>
    <string name="renkon">Lotus root</string>
    <string name="ingen">Green beans</string>
    <string name="shiitake">Shiitake</string>
    <string name="enoki">Enoki</string>
    <string name="shimeji">Shimeji</string>
    <string name="eringi">King trumpet</string>
    <string name="tamago">Egg</string>
    <string name="toufu">Tofu</string>
    <string name="sake">Salmon</string>
    <string name="saba">Mackerel</string>
    <string name="aji">Horse mackerel</string>
    <string name="iwashi">Sardine</string>
    <string name="sanma">Pacific saury</string>
    <string name="tara">Cod</string>
    <string name="katsuo">Bonito</string>
    <string name="buri">Yellowtail</string>
    <string name="ebi">Shrimp</string>
    <string name="hokke">Atka mackerel</string>
    <string name="mekajiki">Swordfish</string>
    <string name="shuffle">Touch the input field to enter a random dish.</string>
    <string name="search">Touch the name of the dish to search for details.</string>
    <string name="back">To return to the previous screen, press the back button or any of the icons above</string>
    <string name="Screen_captured">Screen captured</string>
    <string name="error">This image cannot be loaded</string>

</resources>