<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/editText8n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:autofillHints="hint"
        android:background="#00000000"
        android:gravity="start|top"
        android:hint=""
        android:inputType="text"
        android:text="@string/mm2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_8"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:autofillHints="hint"
        android:background="#00000000"
        android:gravity="start|top"
        android:hint=""
        android:inputType="text"
        android:text="@string/mm1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editText9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:autofillHints="hint"
        android:background="#00000000"
        android:gravity="start|top"
        android:hint=""
        android:inputType="text"
        android:text="@string/sm1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/editText9n"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="240dp"
        android:autofillHints="hint"
        android:background="#00000000"
        android:gravity="start|top"
        android:hint=""
        android:inputType="text"
        android:text="@string/sm2"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/editText9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_8"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/textView_"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:background="#00000000"
        android:inputType="text"
        android:text="@string/c1"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/textView_5"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:background="#00000000"
        android:inputType="text"
        android:text="@string/c5"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_4"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/textView_2"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:background="#00000000"
        android:inputType="text"
        android:text="@string/c2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/textView_7"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:background="#00000000"
        android:inputType="text"
        android:text="@string/c7"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_6"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/textView_4"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:background="#00000000"
        android:inputType="text"
        android:text="@string/c4"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_3"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/textView_3"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:background="#00000000"
        android:inputType="text"
        android:text="@string/c3"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_2"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/textView_6"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:autofillHints=""
        android:background="#00000000"
        android:inputType="text"
        android:text="@string/c6"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_5"
        tools:ignore="LabelFor,MissingConstraints" />

    <EditText
        android:id="@+id/textView_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="#00000000"
        android:inputType="text"
        android:text="@string/c0"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />


</androidx.constraintlayout.widget.ConstraintLayout>